# Snowplow2017

./: .gitignore  .gitmodules  README.md  SubModuleHowTo.txt
catkin_ws/src/my_pcl_tutorial/: package.xml
catkin_ws/src/mybot_description/: CMakeLists.txt  package.xml
catkin_ws/src/mybot_description/urdf/: mybot.xacro
catkin_ws/src/mybot_gazebo/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/zenith_obstacle_detector/: CMakeLists.txt  package.xml
catkin_ws/src/zenith_obstacle_detector/launch/: custom_zed.launch  zed_showObs_localize_rosbridge.launch
catkin_ws/src/zenith_obstacle_detector/msg/: ObstacleList.msg  Obstacles.msg
catkin_ws/src/zenith_obstacle_detector/src/: obstacle_detection_node.cpp  obstacle_detection_node.h  zed_obsticale_detector.cpp
path-planning-notebooks/: sampling based planning.ipynb  zenith motion planning intro.html  zenith motion planning intro.ipynb
